--- a/chrome/global/browser.css
+++ b/chrome/global/browser.css
@@ -1,18 +1,18 @@
 /* Edge-Frfox - browser.css */
 
-@supports (-moz-bool-pref("uc.tweak.floating-tabs")) {
+@media (-moz-bool-pref: "uc.tweak.floating-tabs") {
   :root {
     --browser-frame-bgcolor: var(--lwt-accent-color);
   }
 }
 
-@supports (not -moz-bool-pref("uc.tweak.floating-tabs")) {
+@media not (-moz-bool-pref: "uc.tweak.floating-tabs") {
   :root {
     --browser-frame-bgcolor: var(--toolbar-bgcolor);
   }
 }
 
-@supports (-moz-bool-pref("uc.tweak.rounded-corners")) {
+@media (-moz-bool-pref: "uc.tweak.rounded-corners") {
   :root #browser>#appcontent {
     margin: 0px 3px 3px 3px;
     border-radius: 8px;
