--- a/chrome/global/tweaks.css
+++ b/chrome/global/tweaks.css
@@ -1,7 +1,7 @@
 /* Edge-Frfox - tweaks.css */
 
 /* disable drag space above tabs */
-@supports -moz-bool-pref("uc.tweak.disable-drag-space") {
+@media (-moz-bool-pref: "uc.tweak.disable-drag-space") {
   :root #titlebar {
     --tab-block-margin: 0px !important;
   }
@@ -9,14 +9,14 @@
 
 /* force tabs to toolbar bg (useful for proton themes) (might experience some
 bugs with certain themes eg. dark text on dark background.) */
-@supports -moz-bool-pref("uc.tweak.force-tab-colour") {
+@media (-moz-bool-pref: "uc.tweak.force-tab-colour") {
   :root {
     --lwt-selected-tab-background-color: unset !important;
   }
 }
 
 /* remove tab separators */
-@supports -moz-bool-pref("uc.tweak.remove-tab-separators") {
+@media (-moz-bool-pref: "uc.tweak.remove-tab-separators") {
   .tabbrowser-tab:not([selected="true"], :hover, [beforeselected-visible], [beforehovered]) .tab-stack::after {
     display: none !important;
   }
@@ -26,7 +26,7 @@ bugs with certain themes eg. dark text on dark background.) */
   }
 }
 
-@supports -moz-bool-pref("uc.tweak.floating-tabs") {
+@media (-moz-bool-pref: "uc.tweak.floating-tabs") {
   :root:not(:-moz-lwtheme),
   :root[privatebrowsingmode="temporary"][style*="--lwt-accent-color: rgb(28, 27, 34)"] {
     --lwt-accent-color: light-dark(#f3f3f3, #202020) !important;
@@ -36,6 +36,7 @@ bugs with certain themes eg. dark text on dark background.) */
     --chrome-content-separator-color: light-dark(#bfbfbf, #535353) !important;
     --uc-urlbar-shadow: none !important;
     --uc-tab-border-color: light-dark(#0000, #fff1) !important;
+    --toolbar-non-lwt-bgcolor: var(--lwt-accent-color) !important;
   }
 
   @media (-moz-gtk-csd-available) {
@@ -93,7 +94,7 @@ bugs with certain themes eg. dark text on dark background.) */
     --tab-block-margin: 4px !important;
   }
 
-  @supports -moz-bool-pref("uc.tweak.disable-drag-space") {
+  @media (-moz-bool-pref: "uc.tweak.disable-drag-space") {
     :root #titlebar {
       --tab-block-margin: 4px !important;
     }
@@ -138,7 +139,7 @@ bugs with certain themes eg. dark text on dark background.) */
 /* Mica broken on newer versions of Firefox */
 /* Uncomment to enable, only works for Firefox versions lower than 115 */
 /* @media (-moz-platform: windows) {
-  @supports -moz-bool-pref("uc.tweak.win11-mica") {
+  @media (-moz-bool-pref: "uc.tweak.win11-mica") {
     #main-window:not([inFullscreen]):not(:-moz-lwtheme),
     #main-window:not([inFullscreen])[lwt-default-theme-in-dark-mode="true"] {
       appearance: -moz-win-borderless-glass !important;
@@ -156,7 +157,7 @@ bugs with certain themes eg. dark text on dark background.) */
       --lwt-accent-color: #00000020 !important;
     }
 
-    @supports -moz-bool-pref("uc.tweak.floating-tabs") {
+    @media (-moz-bool-pref: "uc.tweak.floating-tabs") {
       :root:not([inFullscreen]):not(:-moz-lwtheme):not(:-moz-window-inactive) {
         --toolbar-bgcolor: #ffffffcc !important;
         --lwt-accent-color: #0000 !important;
@@ -189,8 +190,8 @@ bugs with certain themes eg. dark text on dark background.) */
 } */
 
 @media not (-moz-platform: macos) {
-  @supports not -moz-bool-pref("uc.tweak.revert-context-menu") {
-    @supports -moz-bool-pref("uc.tweak.vertical-context-navigation") {
+  @media (-moz-bool-pref: "uc.tweak.revert-context-menu") {
+    @media (-moz-bool-pref: "uc.tweak.vertical-context-navigation") {
       #context-navigation {
         flex-direction: column !important;
         -moz-box-orient: vertical !important;
@@ -243,7 +244,7 @@ bugs with certain themes eg. dark text on dark background.) */
 }
 
 @media (-moz-windows-compositor) {
-  @supports -moz-bool-pref("uc.tweak.revert-context-menu") {
+  @media (-moz-bool-pref: "uc.tweak.revert-context-menu") {
     menupopup {
       --panel-color: var(--arrowpanel-color) !important;
       --panel-border-radius: 4px !important;
@@ -259,7 +260,7 @@ bugs with certain themes eg. dark text on dark background.) */
   }
 }
 
-@supports -moz-bool-pref("uc.tweak.show-tab-close-button-on-hover") {
+@media (-moz-bool-pref: "uc.tweak.show-tab-close-button-on-hover") {
   #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not([pinned], [selected]):hover .tab-close-button {
     display: flex !important;
   }
