--- a/chrome/toolbar/navbar.css
+++ b/chrome/toolbar/navbar.css
@@ -27,7 +27,7 @@
   padding: var(--toolbarbutton-inner-padding) var(--uc-toolbarbutton-inner-inline-padding) !important;
 }
 
-@supports (-moz-bool-pref("uc.tweak.rounded-corners")) {
+@media (-moz-bool-pref: "uc.tweak.rounded-corners") {
   #navigator-toolbox {
     border-bottom: none !important;
   }
